<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        xmlns:card_view="https://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardBackgroundColor="grey"
        card_view:cardCornerRadius="15dp"
        android:layout_margin="5dp"
        card_view:cardElevation="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/trailImage"
                android:layout_width="179dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/no_image"
                android:contentDescription="@string/trail_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TrailName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:text="@string/trail_name" />

                <TextView
                    android:id="@+id/trailDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/trail_description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:paddingStart="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:id="@+id/durationIndicator"
                            android:layout_width="45dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="3dp"
                            android:text="@string/trail_duration"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/trailDuration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="120 m" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"

                        >

                        <TextView
                            android:id="@+id/diffIndicator"
                            android:layout_width="15dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginRight="3dp"

                            android:text="@string/difficulty"
                            android:textStyle="bold"
                            tools:ignore="NestedWeights,RtlSymmetry" />

                        <TextView
                            android:id="@+id/trailDiff"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="E" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>